Fix badges alignment

--- a/static/css/themes/board.css
+++ b/static/css/themes/board.css
@@ -314,6 +314,10 @@ textarea.expanded {
     clear: both
 }
 
+.card > div > a {
+    display: block;
+}
+
 .card .members {
     width: 50%;
     float: left;
